# aptoseidon

./: .gitignore  App.tsx  README.md  context.txt  implementation_plan.md.resolved  index.html  netlify.toml  package.json  report.md.resolved  vite.config.ts
aptoseidon-agentic-frontend/: App.tsx  index.tsx  metadata.json  netlify.toml  package-lock.json  types.ts
aptoseidon-agentic-frontend/components/: ResultsSection.tsx
aptoseidon-agentic-frontend/services/: api.ts  walletService.ts
aptoseidon-backend/: pyproject.toml
aptoseidon-frontend/: App.tsx  README.md  index.html  package.json  types.ts
aptoseidon-frontend/components/: Button.tsx  ResultsSection.tsx
aptoseidon-frontend/services/: geminiService.ts  walletService.ts
components/: HistorySidebar.tsx  ResultsSection.tsx
services/: api.ts  walletService.ts
